shugarcrm/css/base.css
@media (min-width: 992px) {
  html {
    position: relative;
    min-height: 100%;
  }

  body {
    /*margin-bottom: 300px;*/
  }
}

body {
  color: #555;
  position: relative;
}

a {
  color: #e61718;
}

a:hover,
a:focus {
  color: #c00;
}

h1 {
  font-size: 20px;
  line-height: 24px;
  color: #383838;
  margin: 0 0 15px;
}

h2 {
  font-size: 16px;
  line-height: 22px;
  color: #4c4f59;
  padding: 5px 0;
  margin: 0 0 20px;
  border-bottom: 1px solid #e6e6e6;
}

h3,
h4 {
  font-size: 14px;
  line-height: 20px;
  color: #e61718;
  padding: 0;
  margin: 2px 0;
}

h4 {
  color: #222;
}

p {
  margin: 0 0 10px;
}

ul.unmarked,
ol.unmarked {
  padding: 0;
  margin: 0;
  list-style: none;
}

table{
  border: 1px solid #d8d8d8;
}
table td{
  padding: 5px;
}

/**
 * Header
 */
.project-header {
  border-bottom: 4px solid #e61718;
  margin-bottom: 0;
  border-radius: 0;
}

.project-header .navbar-right {
  padding: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.navbar-brand {
  position: relative;
  padding-right: 50px;
}

.navbar-brand span {
  position: absolute;
  right: 0;
  top: 16px;
  color: #ccc;
  font: 15px/18px 'Titillium Web', sans-serif;
}

@media (min-width: 768px) {
  .project-header .navbar-right {
    margin-bottom: 0;
  }
}

/**
 * Filters
 */
.filters {
  padding: 30px 0 25px;
}

.filters .row,
.filters .form-set {
  margin: 0;
  padding: 0;
}

.filters .input-wrap {
  margin: 0 0 5px;
  padding: 0;
}

.filters .input-wrap .form-control {
  font-size: 12px;
  border-radius: 0;
}

.filters .input-wrap .dropdown-toggle,
.filters .input-wrap .dropdown-toggle:hover,
.filters .input-wrap .dropdown-toggle:focus,
.filters .input-wrap .dropdown-toggle:active {
  border-radius: 0;
  border: none;
  box-shadow: none;
  font-size: 12px;
  line-height: 28px;
  font-weight: 300;
  color: #666;
  text-transform: none;
  background: #fff;
  outline: none !important;
  padding-left: 5px;
  padding-right: 15px;
  border: 1px solid #ccc;
  border-left-color: #999;
  border-right: none;
}

.filters .input-wrap .open .dropdown-toggle {
  border-top-color: #999;
  border-bottom-color: transparent;
}

.bootstrap-select.btn-group .dropdown-toggle .caret {
  right: 8px;
}

.filters .input-wrap div.dropdown-menu {
  border-radius: 0;
  box-shadow: none;
  border-color: #999;
  background: #fff;
  margin-top: 0;
  border-top: none;
  border-right: none;
  border-bottom: none;
  padding: 0;
  max-width: 100%;
  overflow: visible !important;
}

.filters .input-wrap div.dropdown-menu ul.inner {
  border-right: 1px solid #999;
  border-bottom: 1px solid #999;
  margin-right: -1px;
  padding-bottom: 5px;
}

.filters .input-wrap .dropdown-menu a {
  outline: none;
  font-weight: 300;
  color: #666;
  padding: 5px;
  white-space: normal;
  font-size: 11px;
  line-height: 14px;
}

.filters .form-set .input-wrap:first-child .dropdown-toggle {
  border-left-color: #ccc;
}

.filters .form-set .input-wrap:first-child .open .dropdown-toggle {
  border-left-color: #999;
}

.filters .form-set .input-wrap:last-child .dropdown-toggle {
  border-right: 1px solid #ccc;
}

.filters .form-set .input-wrap:last-child .open .dropdown-toggle {
  border-right-color: #999;
}

.filters .form-set .input-wrap:last-child div.dropdown-menu ul.inner {
  margin-right: 0;
}

.filters .input-wrap.has-icon {
  position: relative;
}

.filters .input-wrap.has-icon .form-control,
.filters .input-wrap.has-icon .form-control:focus {
  border-radius: 0;
  padding-left: 40px;
  box-shadow: none;
}

.filters .input-wrap.has-icon .form-control:focus {
  border-color: #999;
}

.filters .input-wrap.has-icon .glyphicon {
  position: absolute;
  left: 14px;
  top: 14px;
  color: #bbb;
  font-size: 18px;
}

.filters .input-wrap .btn-search {
  border-radius: 0;
  background: #555;
  color: #fff;
  padding: 14px 0;
}

.filters .input-wrap .btn-search:hover {
  background: #444;
}

@media (min-width: 992px) {
  .filters .input-wrap .dropdown-toggle,
  .filters .input-wrap .dropdown-toggle:hover,
  .filters .input-wrap .dropdown-toggle:focus,
  .filters .input-wrap .dropdown-toggle:active {
    font-size: 14px;
    padding: 8px 25px 8px 20px;
  }

  .bootstrap-select.btn-group .dropdown-toggle .caret {
    right: 12px;
  }

  .filters .input-wrap .form-control {
    font-size: 14px;
  }

  .filters .input-wrap .dropdown-menu a {
    padding: 7px 20px;
    font-size: 14px;
    line-height: 16px;
  }

  .filters .input-wrap.has-icon .form-control {
    border-right: none;
  }

  .filters .form-set .input-wrap:first-child .dropdown-toggle {
    border-left-color: #999;
  }
}

/**
 * Sub navigation
 */
.sub-navigation {
  background: #d8d8d8;
}

.sub-navigation .container {
  position: relative;
}

.sub-navigation .nav {
  padding: 0;
}

.sub-navigation .nav li a {
  color: #fff;
  padding: 10px 15px;
  font-size: 12px;
}

.sub-navigation .nav li.active a {
  background: #bbb;
}

.sub-navigation .nav li:hover a,
.sub-navigation .nav li a:focus {
  background: #ccc;
  outline: none;
}

.sub-navigation .navbar-right {
  padding: 0 15px;
  margin-top: 19px;
}

.sub-navigation .toogle-wrap {
  overflow: hidden;
}

.sub-navigation .navbar-toggle {
  float: left;
}

.sub-navigation .navbar-toggle {
  border: 2px solid #fff;
}

.sub-navigation .navbar-toggle .icon-bar {
  background-color: #fff;
}

.sub-navigation .create-ticket {
  position: absolute;
  right: 15px;
  top: 7px;
}

@media (min-width: 768px) {
  .sub-navigation .nav li a {
    padding: 15px 15px;
    font-size: 11px;
  }

  .sub-navigation .create-ticket {
    padding: 5px 10px;
    top: 10px;
  }
}

@media (min-width: 992px) {
  .sub-navigation .nav li a {
    padding: 27px 25px;
    font-size: 12px;
  }

  .sub-navigation .create-ticket {
    right: 15px;
    top: 18px;
    padding: 8px 20px;
  }
}

/**
 * Active filters
 */
.active-filters {
  margin: 30px 0 10px;
  font-size: 13px;
  line-height: 16px;
  color: #bbb;
  font-weight: 300;
}
/* ... */

